--- a/care.html
+++ b/care.html
@@ -36,7 +36,7 @@
   <div id="about"class="mid">
     <img class="pic" src="dec.png" alt="">
     <h1 class="head">WELCOME TO<span class="name"> CARE WELFARE FOUNDATION</span></h1>
-    <h2>About Us</h2>
+      <h1 class="abt">About Us</h1>
     <p>We believe the major focus of an organization like any
       NGO should be on developing society, improving
       communities, and promoting citizen participation.Our mission is to bridge the gap between those in
