--- a/care.html
+++ b/care.html
@@ -86,7 +86,7 @@ Ph no. 7089776574</p>
   </table>
 </div>
 <div class="img1">
-  <img src="socialmedia.png" alt="">
+  <img src="socialmedia.PNG" alt="">
 
 </div>
 <div class="footer">
